--- a/css/erasmus.css
+++ b/css/erasmus.css
@@ -1,54 +1,20 @@
 body {
-  padding: 0 25px 25px 25px;
-  border-left: solid 4px var(--blue);
-  border-right: solid 4px var(--blue);
+  border-left: solid 10px var(--blue);
+  border-right: solid 10px var(--blue);
   border-top: solid 10px var(--blue);
   min-height: 100vh;
+  border-bottom: solid 10px var(--blue);
   box-sizing: border-box; }
 
 header {
   font-size: 5rem;
   color: var(--blue);
-  font-weight: 600; }
+  font-weight: 600;
+  padding: 0 25px; }
 
 main {
-  display: grid;
-  grid-template-columns: 1fr 2fr; }
+  padding: 30px; }
 
-#info {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-gap: 50px;
-  background: var(--greyGradient); }
-  #info > div {
-    display: flex;
-    align-items: center;
-    text-align: justify;
-    height: 100%; }
-    #info > div:nth-of-type(1) {
-      border-bottom: 1px solid #E0E0E0; }
-
-#links {
-  display: grid;
-  box-sizing: border-box;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-gap: 100px;
-  padding: 0 80px; }
-  #links a {
-    display: inline-block;
-    color: #fff;
-    text-decoration: none; }
-    #links a > div {
-      background: linear-gradient(45deg, #F44336 0%, #E91E63 5%, #F44336 100%);
-      padding: 20px;
-      height: 300px;
-      display: flex;
-      align-items: center;
-      box-sizing: border-box;
-      flex-wrap: wrap; }
-  #links h2 {
-    margin: 10px 0;
-    width: 100%; }
+/*# sourceMappingURL=erasmus.css.map */
 
 /*# sourceMappingURL=erasmus.css.map */
