--- a/css/global.css
+++ b/css/global.css
@@ -34,4 +34,36 @@ body {
         .headerNav ul li a:hover {
           color: var(--blue); }
 
+#top {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 50px; }
+
+#info {
+  grid-row: span 2; }
+  #info p {
+    margin: 0 0 50px; }
+
+.infoBox {
+  display: inline-block;
+  color: #fff;
+  text-decoration: none; }
+
+.infoBox > div {
+  background: linear-gradient(45deg, #EF5350 0%, #D81B60 100%);
+  padding: 20px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  transition: box-shadow 0.3s; }
+  .infoBox > div:hover {
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.4); }
+
+.infoBox h2 {
+  margin: 10px 0;
+  width: 100%; }
+
 /*# sourceMappingURL=global.css.map */
