--- a/css/index.scss
+++ b/css/index.scss
@@ -13,16 +13,18 @@ main {
     border-left: solid var(--blue) 10px;
     border-bottom: solid var(--blue) 10px;
     h1 {
-        font-size: 5rem;
-        margin: 0;
+        font-size: 4rem;
+        margin: 0 50px;
         padding: 0;
         align-self: center;
         color: var(--blue);
         text-align: center;
         display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
         align-items: center;
         img {
-            margin: 0 50px;
+            margin: 25px 50px;
             object-fit: contain;
         }
     }       
