--- a/css/index.scss
+++ b/css/index.scss
@@ -4,36 +4,32 @@ main {
 }
 
 #title {
-    height: 100vh;
+    min-height: 100vh;
     box-sizing: border-box;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    padding: 15px 0;
     border: solid var(--blue) 10px;
+    overflow: hidden;
     h1 {
         font-size: 4rem;
-        margin: 0 50px;
+        margin: 25px 50px;
         padding: 0;
-        align-self: center;
         color: var(--blue);
         text-align: center;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        align-items: center;
         img {
-            margin: 25px 50px;
+            margin: 0 auto 25px auto;
             object-fit: contain;
+            display: block;
         }
     }       
 }
 
 div#erasmus-background {
-    background: url("../erasmus.jpg");
-    background-size: cover;
+    background: url("../erasmus.jpg") var(--blue);
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: center;
     grid-row: span 2;
 }
 
@@ -53,7 +49,7 @@ nav {
             position: relative;
         }
         li {
-            margin: 20px 30px;
+            margin: 10px 30px;
             transition: all 0.3s;
             display: inline-block;
             font-weight: 600;
@@ -68,10 +64,10 @@ nav {
 
 #desc {
     text-align: center;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     border-top: 1px solid #E0E0E0;
     border-bottom: 1px solid #E0E0E0;
-    padding: 100px 0;
+    padding: 5rem 25px;
     background: var(--greyGradient);
 }
 
@@ -82,4 +78,39 @@ footer {
     font-style: italic;
     color: #fff;
     padding: 20px;
+}
+
+//RWS
+@media only screen and (max-width: 1100px) {
+    :root {
+        font-size: 0.8em;
+    }
+}
+
+@media only screen and (max-width: 910px) {
+    main {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 100fr;
+    }
+}
+
+@media only screen and (max-width: 590px) {
+    #title h1 {
+        margin: 25px 5px;
+    }
+}
+
+@media only screen and (max-width: 590px) {
+    #title h1 {
+        font-size: 3rem;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    #title h1 {
+        font-size: 2.5rem;
+    }
+    #title ul li {
+        display: block;
+    }
 }
