--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@
 :root {
   --greyGradient: linear-gradient(to bottom, #F5F5F5 0%, #FAFAFA 50%, #F5F5F5 100%);
   --blue: #004593;
-  font-size: calc(0.9em + 0.1vw); }
+  font-size: calc(1em + 0.1vw); }
 
 body {
   margin: 0;
@@ -10,16 +10,17 @@ body {
   background: var(--greyGradient); }
 
 .headerNav {
-  box-shadow: 0px 2px 4px #B0BEC5;
-  font-size: 2.4rem;
-  padding: 15px;
+  -webkit-box-shadow: 0px 2px 4px #B0BEC5;
+          box-shadow: 0px 2px 4px #B0BEC5;
+  font-size: 2rem;
+  padding: 15px 25px;
   font-weight: 600;
   margin-bottom: 25px;
   color: #1570FF;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px; }
   .headerNav ul {
-    font-size: 1.5rem;
+    font-size: 0.75em;
     list-style: none;
     float: right;
     margin: 0;
@@ -29,6 +30,7 @@ body {
       margin: 0 11px; }
       .headerNav ul li a {
         color: #1570FF;
+        -webkit-transition: all 0.4s;
         transition: all 0.4s;
         text-decoration: none; }
         .headerNav ul li a:hover {
@@ -54,16 +56,54 @@ body {
   background: linear-gradient(45deg, #EF5350 0%, #D81B60 100%);
   padding: 20px;
   height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  flex-wrap: wrap;
-  transition: box-shadow 0.3s; }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-transition: -webkit-box-shadow 0.2s;
+  transition: -webkit-box-shadow 0.2s;
+  transition: box-shadow 0.2s;
+  transition: box-shadow 0.2s, -webkit-box-shadow 0.2s; }
   .infoBox > div:hover {
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.4); }
+    -webkit-box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.4);
+            box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.4); }
 
 .infoBox h2 {
   margin: 10px 0;
   width: 100%; }
+
+@media only screen and (max-width: 1440px) {
+  .headerNav {
+    font-size: 1.75rem; } }
+@media only screen and (max-width: 1220px) {
+  .headerNav {
+    padding: 10px 25px; }
+    .headerNav ul {
+      display: block;
+      float: none;
+      margin: 7px 0; } }
+@media only screen and (max-width: 900px) {
+  #top {
+    grid-template-columns: 1fr 1fr; }
+
+  #info {
+    grid-row: initial; }
+    #info p {
+      margin: 0; }
+    #info p:not(:last-of-type) {
+      margin: 0 0 50px 0; } }
+@media only screen and (max-width: 630px) {
+  #top {
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content; } }
+@media only screen and (max-width: 400px) {
+  header {
+    font-size: 3rem; } }
 
 /*# sourceMappingURL=global.css.map */
