--- a/css/index.css
+++ b/css/index.css
@@ -8,8 +8,8 @@ main {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  border: solid var(--blue) 10px;
-  overflow: hidden; }
+  overflow: hidden;
+  border: 10px solid var(--blue); }
   #title h1 {
     font-size: 4rem;
     margin: 25px 50px;
@@ -32,22 +32,25 @@ nav {
   text-align: center;
   font-weight: 500; }
   nav ul {
-    list-style: none;
     font-size: 2rem;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    max-width: 60%;
     margin: 0 auto;
     padding: 0; }
     nav ul a {
-      color: #1570FF;
+      color: var(--light-blue);
       text-decoration: none;
       display: inline-block;
       transition: all 0.3s;
       position: relative; }
     nav ul li {
-      margin: 10px 30px;
+      margin: 15px 30px;
       transition: all 0.3s;
       display: inline-block;
       font-weight: 600;
-      letter-spacing: 1.25px; }
+      letter-spacing: 1.05px; }
       nav ul li a:hover {
         color: var(--blue);
         text-decoration: underline; }
@@ -60,32 +63,25 @@ nav {
   padding: 5rem 25px;
   background: var(--greyGradient); }
 
-footer {
-  background: var(--blue);
-  font-size: 1rem;
-  text-align: center;
-  font-style: italic;
-  color: #fff;
-  padding: 20px; }
-
 @media only screen and (max-width: 1100px) {
   :root {
     font-size: 0.8em; } }
+
 @media only screen and (max-width: 910px) {
   main {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 100fr; } }
+
 @media only screen and (max-width: 590px) {
   #title h1 {
     margin: 25px 5px; } }
+
 @media only screen and (max-width: 590px) {
   #title h1 {
     font-size: 3rem; } }
+
 @media only screen and (max-width: 390px) {
   #title h1 {
     font-size: 2.5rem; }
-
   #title ul li {
     display: block; } }
-
-/*# sourceMappingURL=index.css.map */
