--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Internatonalisation CUSTOM
 Description: Internatonalisation CUSTOM
-Version: 1.2
+Version: 1.3
 */
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,500");
 :root {
@@ -12,7 +12,7 @@ Version: 1.2
 
 body {
   margin: 0;
-  font-family: "Maven Pro";
+  font-family: "Maven Pro", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background: var(--greyGradient); }
 
 .headerNav {
@@ -50,9 +50,12 @@ body {
   color: var(--blue); }
 
 footer {
-  background: rgba(0, 0, 0, 0.8);
+  background: var(--blue);
+  font-size: 1rem;
+  text-align: center;
+  font-style: italic;
   color: #fff;
-  text-align: center; }
+  padding: 10px 0 20px 0; }
 
 @media only screen and (max-width: 1440px) {
   .headerNav {
