--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,14 @@ Version: 1.2
 */
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,500");
 :root {
-  --greyGradient: linear-gradient(to bottom, #F5F5F5 0%, #FAFAFA 50%, #F5F5F5 100%);
+  --greyGradient: linear-gradient(
+    to bottom,
+    #f5f5f5 0%,
+    #fafafa 50%,
+    #f5f5f5 100%
+  );
   --blue: #004593;
-  --light-blue: #1570FF;
+  --light-blue: #1570ff;
   font-size: calc(1em + 0.1vw); }
 
 body {
@@ -16,7 +21,8 @@ body {
   background: var(--greyGradient); }
 
 .headerNav {
-  box-shadow: 0 2px 4px #B0BEC5;
+  box-shadow: 0 2px 4px #b0bec5;
+  background: #fff;
   font-size: 2rem;
   padding: 15px 25px;
   font-weight: 600;
@@ -24,30 +30,71 @@ body {
   color: var(--light-blue);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px; }
-
-.headerNav a {
-  color: inherit;
-  text-decoration: none; }
-
-.headerNav ul {
-  font-size: 0.75em;
-  list-style: none;
-  float: right;
-  margin: 0;
-  padding: 0; }
-
-.headerNav ul li {
-  display: inline-block;
-  margin: 0 11px; }
-
-.headerNav ul li a {
-  color: var(--light-blue);
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-  text-decoration: none; }
-
-.headerNav ul li a:hover {
-  color: var(--blue); }
+  .headerNav.nav-more-btn {
+    display: none; }
+  .headerNav a {
+    color: inherit;
+    text-decoration: none; }
+  .headerNav ul.nav-items {
+    font-size: 0.75em;
+    list-style: none;
+    float: right;
+    margin: 0;
+    padding: 0; }
+    .headerNav ul.nav-items li {
+      display: inline-block;
+      margin: 0 11px; }
+      .headerNav ul.nav-items li a {
+        color: var(--light-blue);
+        transition: color 0.4s;
+        text-decoration: none; }
+        .headerNav ul.nav-items li a:hover {
+          color: var(--blue); }
+      .headerNav ul.nav-items li.nav-more-btn, .headerNav ul.nav-items li.nav-mobile-back-btn {
+        display: none; }
+      .headerNav ul.nav-items li.nav-mobile-back-btn {
+        font-size: 1.75rem;
+        color: var(--blue); }
+  .headerNav .nav-expand-mobile-menu {
+    display: none;
+    margin-right: 15px;
+    vertical-align: bottom;
+    cursor: pointer; }
+    .headerNav .nav-expand-mobile-menu div {
+      width: 30px;
+      height: 3px;
+      margin: 5px 0;
+      background: var(--blue); }
+  .headerNav .nav-mobile-background {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.75); }
+  .headerNav.nav-items--active ul.nav-items {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #fff;
+    font-size: 2rem;
+    z-index: 2;
+    text-align: center; }
+    .headerNav.nav-items--active ul.nav-items li.nav-item--secondary,
+    .headerNav.nav-items--active ul.nav-items li {
+      display: block;
+      padding: 16px 0; }
+      .headerNav.nav-items--active ul.nav-items li.nav-item--secondary.nav-more-btn,
+      .headerNav.nav-items--active ul.nav-items li.nav-more-btn {
+        display: none !important; }
+      .headerNav.nav-items--active ul.nav-items li.nav-item--secondary.nav-mobile-back-btn,
+      .headerNav.nav-items--active ul.nav-items li.nav-mobile-back-btn {
+        display: block; }
+  .headerNav.nav-items--active .nav-mobile-background {
+    display: block; }
 
 footer {
   background: var(--blue);
@@ -57,17 +104,21 @@ footer {
   color: #fff;
   padding: 10px 0 20px 0; }
 
+@media only screen and (max-width: 1555px) and (min-width: 1100px) {
+  .headerNav ul.nav-items li.nav-item--secondary {
+    display: none; }
+  .headerNav ul.nav-items li.nav-more-btn {
+    display: initial; } }
+
 @media only screen and (max-width: 1440px) {
   .headerNav {
     font-size: 1.75rem; } }
 
-@media only screen and (max-width: 1220px) {
-  .headerNav {
-    padding: 10px 25px; }
-  .headerNav ul {
-    display: block;
-    float: none;
-    margin: 7px 0; } }
+@media only screen and (max-width: 1100px) {
+  .headerNav ul.nav-items {
+    display: none; }
+  .headerNav .nav-expand-mobile-menu {
+    display: inline-block; } }
 
 @media only screen and (max-width: 400px) {
   header {
