--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,10 +6,16 @@ Version: 1.2
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,500");
 
 :root {
-  --greyGradient: linear-gradient(to bottom, #F5F5F5 0%, #FAFAFA 50%, #F5F5F5 100%);
+  --greyGradient: linear-gradient(
+    to bottom,
+    #f5f5f5 0%,
+    #fafafa 50%,
+    #f5f5f5 100%
+  );
   --blue: #004593;
-  --light-blue: #1570FF;
-  font-size: calc(1em + 0.1vw); }
+  --light-blue: #1570ff;
+  font-size: calc(1em + 0.1vw);
+}
 
 body {
   margin: 0;
@@ -17,35 +23,104 @@ body {
   background: var(--greyGradient);
 }
 
+// Navbar
 .headerNav {
-  box-shadow: 0 2px 4px #B0BEC5;
+  box-shadow: 0 2px 4px #b0bec5;
+  background: #fff;
   font-size: 2rem;
   padding: 15px 25px;
   font-weight: 600;
   margin-bottom: 25px;
   color: var(--light-blue);
   border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px; }
-  .headerNav a {
+  border-bottom-right-radius: 20px;
+  &.nav-more-btn {
+    display: none;
+  }
+  a {
     color: inherit;
     text-decoration: none;
   }
-  .headerNav ul {
+  ul.nav-items {
     font-size: 0.75em;
     list-style: none;
     float: right;
     margin: 0;
-    padding: 0; }
-    .headerNav ul li {
+    padding: 0;
+    li {
       display: inline-block;
-      margin: 0 11px; }
-      .headerNav ul li a {
+      margin: 0 11px;
+      a {
         color: var(--light-blue);
-        -webkit-transition: all 0.4s;
-        transition: all 0.4s;
-        text-decoration: none; }
-        .headerNav ul li a:hover {
-          color: var(--blue); }
+        transition: color 0.4s;
+        text-decoration: none;
+        &:hover {
+          color: var(--blue);
+        }
+      }
+      &.nav-more-btn,
+      &.nav-mobile-back-btn {
+        display: none;
+      }
+      &.nav-mobile-back-btn {
+        font-size: 1.75rem;
+        color: var(--blue);
+      }
+    }
+  }
+  // Open mobile dropdown menu button
+  .nav-expand-mobile-menu {
+    display: none;
+    margin-right: 15px;
+    vertical-align: bottom;
+    cursor: pointer;
+    div {
+      width: 30px;
+      height: 3px;
+      margin: 5px 0;
+      background: var(--blue);
+    }
+  }
+  // Displayed behind nav when mobile dropdown is used
+  .nav-mobile-background {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.75);
+  }
+  // Mobile dropdown active
+  &.nav-items--active {
+    ul.nav-items {
+      display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: #fff;
+      font-size: 2rem;
+      z-index: 2;
+      text-align: center;
+      li.nav-item--secondary,
+      li {
+        display: block;
+        padding: 16px 0;
+        &.nav-more-btn {
+          display: none !important;
+        }
+        &.nav-mobile-back-btn {
+          display: block;
+        }
+      }
+    }
+    .nav-mobile-background {
+      display: block;
+    }
+  }
+}
+// End navbar
 
 footer {
   background: var(--blue);
@@ -56,16 +131,36 @@ footer {
   padding: 10px 0 20px 0;
 }
 
+// RWD
+@media only screen and (max-width: 1555px) and (min-width: 1100px) {
+  .headerNav {
+    ul.nav-items {
+      li.nav-item--secondary {
+        display: none;
+      }
+      li.nav-more-btn {
+        display: initial;
+      }
+    }
+  }
+}
 @media only screen and (max-width: 1440px) {
   .headerNav {
-    font-size: 1.75rem; } }
-@media only screen and (max-width: 1220px) {
+    font-size: 1.75rem;
+  }
+}
+@media only screen and (max-width: 1100px) {
   .headerNav {
-    padding: 10px 25px; }
-    .headerNav ul {
-      display: block;
-      float: none;
-      margin: 7px 0; } }
+    ul.nav-items {
+      display: none;
+    }
+    .nav-expand-mobile-menu {
+      display: inline-block;
+    }
+  }
+}
 @media only screen and (max-width: 400px) {
   header {
-    font-size: 3rem; } }
+    font-size: 3rem;
+  }
+}
