--- a/css/index.css
+++ b/css/index.css
@@ -1,91 +1,146 @@
 main {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 2fr 1fr; }
+  -ms-grid-columns: 2fr 1fr;
+      grid-template-columns: 2fr 1fr;
+}
 
 #title {
   min-height: 100vh;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   overflow: hidden;
-  border: 10px solid var(--blue); }
-  #title h1 {
-    font-size: 4rem;
-    margin: 25px 50px;
-    padding: 0;
-    color: var(--blue);
-    text-align: center; }
-    #title h1 img {
-      margin: 0 auto 25px auto;
-      object-fit: contain;
-      display: block; }
+  border: 10px solid var(--blue);
+}
+
+#title h1 {
+  font-size: 4rem;
+  margin: 25px 50px;
+  padding: 0;
+  color: var(--blue);
+  text-align: center;
+}
+
+#title h1 img {
+  margin: 0 auto 25px auto;
+  -o-object-fit: contain;
+     object-fit: contain;
+  display: block;
+}
 
 div#erasmus-background {
   background: url("../erasmus.jpg") var(--blue);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  grid-row: span 2; }
+  grid-row: span 2;
+}
 
 nav {
   text-align: center;
-  font-weight: 500; }
-  nav ul {
-    font-size: 2rem;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    max-width: 60%;
-    margin: 0 auto;
-    padding: 0; }
-    nav ul a {
-      color: var(--light-blue);
-      text-decoration: none;
-      display: inline-block;
-      transition: all 0.3s;
-      position: relative; }
-    nav ul li {
-      margin: 15px 30px;
-      transition: all 0.3s;
-      display: inline-block;
-      font-weight: 600;
-      letter-spacing: 1.05px; }
-      nav ul li a:hover {
-        color: var(--blue);
-        text-decoration: underline; }
+  font-weight: 500;
+}
+
+nav ul {
+  font-size: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul a {
+  color: var(--light-blue);
+  text-decoration: none;
+  display: inline-block;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  position: relative;
+}
+
+nav ul li {
+  margin: 15px 30px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  display: inline-block;
+  font-weight: 600;
+  letter-spacing: 1.05px;
+}
+
+nav ul li a:hover {
+  color: var(--blue);
+  text-decoration: underline;
+}
 
 .nav-more-btn,
 .nav-mobile-back-btn {
-  display: none; }
+  display: none;
+}
 
 #desc {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   border-top: 1px solid #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
-  padding: 5rem 25px;
-  background: var(--greyGradient); }
+  padding: 5rem 23%;
+  background: var(--greyGradient);
+}
 
 @media only screen and (max-width: 1100px) {
   :root {
-    font-size: 0.8em; } }
+    font-size: 0.9em;
+  }
+  #desc {
+    padding: 3rem;
+  }
+}
 
 @media only screen and (max-width: 910px) {
   main {
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 100fr; } }
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    -ms-grid-columns: 100fr;
+        grid-template-columns: 100fr;
+  }
+}
 
 @media only screen and (max-width: 590px) {
   #title h1 {
-    margin: 25px 5px; } }
+    margin: 25px 5px;
+  }
+}
 
 @media only screen and (max-width: 590px) {
   #title h1 {
-    font-size: 3rem; } }
+    font-size: 2.7rem;
+  }
+  #title ul li.nav-item--primary, #title ul li.nav-item--secondary {
+    width: 100%;
+    margin: 10px 0;
+  }
+}
 
 @media only screen and (max-width: 390px) {
+  :root {
+    font-size: 0.7rem;
+  }
   #title h1 {
-    font-size: 2.5rem; }
-  #title ul li {
-    display: block; } }
+    font-size: 2.5rem;
+  }
+}
+/*# sourceMappingURL=index.css.map */
