--- a/css/partners-country-selector.css
+++ b/css/partners-country-selector.css
@@ -1,17 +1,30 @@
 main {
   font-weight: 600;
   text-align: center;
-  font-size: 2.5rem; }
-  main img {
-    margin: 25px auto 0 auto;
-    width: 180px;
-    display: block; }
-  main a {
-    color: #000;
-    text-decoration: none;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    max-width: 200px;
-    margin: 0 auto; }
+  font-size: 2.5rem;
+}
+
+main img {
+  margin: 25px auto 0 auto;
+  width: 180px;
+  display: block;
+}
+
+main a {
+  color: #000;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 200px;
+  margin: 0 auto;
+}
+/*# sourceMappingURL=partners-country-selector.css.map */
