--- a/css/style.css
+++ b/css/style.css
@@ -13,113 +13,209 @@ Version: 1.2
   );
   --blue: #004593;
   --light-blue: #1570ff;
-  font-size: calc(1em + 0.1vw); }
+  font-size: calc(1em + 0.1vw);
+}
 
 body {
   margin: 0;
   font-family: "Maven Pro", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: var(--greyGradient); }
+  background: var(--greyGradient);
+}
+
+::-webkit-scrollbar {
+  width: 13px;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+  height: 13px;
+  border-radius: 0;
+  background-color: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--light-blue);
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ffffff;
+}
+
+::-moz-selection {
+  background: rgba(245, 0, 87, 0.5);
+}
+
+::selection {
+  background: rgba(245, 0, 87, 0.5);
+}
 
 .headerNav {
-  box-shadow: 0 2px 4px #b0bec5;
+  -webkit-box-shadow: 0 2px 3px #d7d7d7;
+          box-shadow: 0 2px 3px #d7d7d7;
   background: #fff;
   font-size: 2rem;
   padding: 15px 25px;
   font-weight: 600;
   margin-bottom: 25px;
   color: var(--light-blue);
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px; }
-  .headerNav.nav-more-btn {
-    display: none; }
-  .headerNav a {
-    color: inherit;
-    text-decoration: none; }
-  .headerNav ul.nav-items {
-    font-size: 0.75em;
-    list-style: none;
-    float: right;
-    margin: 0;
-    padding: 0; }
-    .headerNav ul.nav-items li {
-      display: inline-block;
-      margin: 0 11px; }
-      .headerNav ul.nav-items li a {
-        color: var(--light-blue);
-        transition: color 0.4s;
-        text-decoration: none; }
-        .headerNav ul.nav-items li a:hover {
-          color: var(--blue); }
-      .headerNav ul.nav-items li.nav-more-btn, .headerNav ul.nav-items li.nav-mobile-back-btn {
-        display: none; }
-      .headerNav ul.nav-items li.nav-mobile-back-btn {
-        font-size: 1.75rem;
-        color: var(--blue); }
-  .headerNav .nav-expand-mobile-menu {
-    display: none;
-    margin-right: 15px;
-    vertical-align: bottom;
-    cursor: pointer; }
-    .headerNav .nav-expand-mobile-menu div {
-      width: 30px;
-      height: 3px;
-      margin: 5px 0;
-      background: var(--blue); }
-  .headerNav .nav-mobile-background {
-    display: none;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.75); }
-  .headerNav.nav-items--active ul.nav-items {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background: #fff;
-    font-size: 2rem;
-    z-index: 2;
-    text-align: center; }
-    .headerNav.nav-items--active ul.nav-items li.nav-item--secondary,
-    .headerNav.nav-items--active ul.nav-items li {
-      display: block;
-      padding: 16px 0; }
-      .headerNav.nav-items--active ul.nav-items li.nav-item--secondary.nav-more-btn,
-      .headerNav.nav-items--active ul.nav-items li.nav-more-btn {
-        display: none !important; }
-      .headerNav.nav-items--active ul.nav-items li.nav-item--secondary.nav-mobile-back-btn,
-      .headerNav.nav-items--active ul.nav-items li.nav-mobile-back-btn {
-        display: block; }
-  .headerNav.nav-items--active .nav-mobile-background {
-    display: block; }
+}
+
+.headerNav.nav-more-btn {
+  display: none;
+}
+
+.headerNav a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.headerNav ul.nav-items {
+  font-size: 0.75em;
+  list-style: none;
+  float: right;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+  color: var(--light-blue);
+}
+
+.headerNav ul.nav-items li {
+  display: inline-block;
+  margin: 0 11px;
+}
+
+.headerNav ul.nav-items li a {
+  color: inherit;
+  -webkit-transition: color 0.4s;
+  transition: color 0.4s;
+  text-decoration: none;
+}
+
+.headerNav ul.nav-items li a:hover {
+  color: var(--blue);
+}
+
+.headerNav ul.nav-items li.nav-more-btn, .headerNav ul.nav-items li.nav-mobile-back-btn {
+  display: none;
+}
+
+.headerNav ul.nav-items li.nav-mobile-back-btn {
+  font-size: 1.75rem;
+  color: var(--blue);
+}
+
+.headerNav .nav-expand-mobile-menu {
+  display: none;
+  margin-right: 15px;
+  vertical-align: bottom;
+  cursor: pointer;
+}
+
+.headerNav .nav-expand-mobile-menu .nav-expand-mobile-menu__container {
+  display: inline-block;
+}
+
+.headerNav .nav-expand-mobile-menu .nav-expand-mobile-menu__container div {
+  width: 30px;
+  height: 3px;
+  margin: 5px 0;
+  background: var(--blue);
+}
+
+.headerNav .nav-expand-mobile-menu .nav-expand-mobile-menu__title {
+  display: none;
+  font-weight: 500;
+  color: var(--blue);
+  vertical-align: top;
+  font-size: 0.9em;
+}
+
+.headerNav .nav-mobile-background {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 1;
+}
+
+.headerNav.nav-items--active ul.nav-items {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  font-size: 2rem;
+  z-index: 2;
+  text-align: center;
+}
+
+.headerNav.nav-items--active ul.nav-items li.nav-item--secondary,
+.headerNav.nav-items--active ul.nav-items li {
+  display: block;
+  padding: 16px 0;
+}
+
+.headerNav.nav-items--active ul.nav-items li.nav-item--secondary.nav-more-btn,
+.headerNav.nav-items--active ul.nav-items li.nav-more-btn {
+  display: none !important;
+}
+
+.headerNav.nav-items--active ul.nav-items li.nav-item--secondary.nav-mobile-back-btn,
+.headerNav.nav-items--active ul.nav-items li.nav-mobile-back-btn {
+  display: block;
+}
+
+.headerNav.nav-items--active .nav-mobile-background {
+  display: block;
+}
 
 footer {
   background: var(--blue);
   font-size: 1rem;
   text-align: center;
-  font-style: italic;
   color: #fff;
-  padding: 10px 0 20px 0; }
+  padding: 10px 0 20px 0;
+}
 
-@media only screen and (max-width: 1555px) and (min-width: 1100px) {
+@media only screen and (max-width: 1300px) and (min-width: 1100px) {
   .headerNav ul.nav-items li.nav-item--secondary {
-    display: none; }
+    display: none;
+  }
   .headerNav ul.nav-items li.nav-more-btn {
-    display: initial; } }
+    display: initial;
+  }
+}
 
 @media only screen and (max-width: 1440px) {
   .headerNav {
-    font-size: 1.75rem; } }
+    font-size: 1.75em;
+  }
+}
 
 @media only screen and (max-width: 1100px) {
   .headerNav ul.nav-items {
-    display: none; }
+    display: none;
+  }
   .headerNav .nav-expand-mobile-menu {
-    display: inline-block; } }
+    display: inline-block;
+  }
+}
 
-@media only screen and (max-width: 400px) {
-  header {
-    font-size: 3rem; } }
+@media only screen and (max-width: 580px) {
+  .headerNav {
+    padding: 15px;
+    font-size: 1.5em;
+  }
+  .headerNav a {
+    display: block;
+    text-align: center;
+  }
+  .headerNav .nav-expand-mobile-menu .nav-expand-mobile-menu__title {
+    display: inline;
+  }
+}
+/*# sourceMappingURL=style.css.map */
