--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -1,3 +1,114 @@
 h2 {
     font-weight: bold;
 }
+header {
+    padding: 50px;
+    background: url("../blog-header-background.png");
+    background-position: bottom;
+    color: #fff;
+    background-size: cover;
+    text-align: center;
+    box-shadow: inset 0 2px 8px rgba(82, 82, 82, 0.4);
+    margin-bottom: 30px;
+}
+.headerNav {
+    margin-bottom: 0!important;
+}
+header h1 {
+    text-shadow: 1px 3px 6px rgba(0, 0, 0, 0.3);
+    font-size: 4.5rem;
+    font-weight: 600;
+    margin: 30px 0;
+}
+.blog__breadcrumb {
+    font-size: 2.5rem;
+    text-shadow: none;
+    margin-bottom: 15px;
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+}
+.blog__header-description {
+    font-size: 1.3rem;
+    font-weight: normal;
+    width: 50%;
+    margin: 30px auto;
+}
+.blog__header-description p {
+    margin: 0;
+}
+.blog__author-prefix {
+    font-weight: 400;
+    font-size: 2.7rem;
+}
+article.blog-post:not(:first-child) {
+    margin: 60px 0;
+}
+article p {
+    margin-bottom: 1rem;
+}
+.pagination {
+    margin: 60px 0;
+    padding: 15px 0 0;
+    border-top: solid 2px #37474F;
+    border-radius: 0;
+}
+.page-numbers {
+    background: #546E7A;
+    transition: all 0.2s;
+    color: #fff;
+    padding: 8px 12px;
+    font-weight: 500;
+    &:not(:first-child) {
+        margin-left: 12px;
+    }
+    &.current {
+        background: #37474F;
+    }
+    &:hover {
+        background: #37474F;
+        color: #fff;
+    }
+}
+// Aside
+aside ul {
+    margin-bottom: 2rem;
+}
+.wp-block-pullquote {
+    padding: 3em;
+    border-top: solid 4px #555d66;
+    border-bottom: solid 4px #555d66;
+    p {
+        font-size: 1.7rem;
+        margin-bottom: 0;
+    }
+    cite {
+        font-weight: 500;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: 1rem;
+        margin-top: 30px;
+    }
+}
+blockquote {
+    margin: 0;
+}
+// RWD
+@media only screen and (max-width: 740px) {
+    header {
+        padding: 25px;
+    }
+    .blog__header-description {
+        width: auto;
+        margin: 30px 0;
+    }
+}
+@media only screen and (max-width: 750px) {
+    header {
+        padding: 10px;
+        h1 {
+            font-size: 3.2rem; 
+        }
+    }
+}
