--- a/scss/index.scss
+++ b/scss/index.scss
@@ -39,10 +39,9 @@ nav {
   ul {
     font-size: 2rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
-    max-width: 60%;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     a {
       color: var(--light-blue);
@@ -72,17 +71,20 @@ nav {
 
 #desc {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   border-top: 1px solid #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
-  padding: 5rem 25px;
+  padding: 5rem 23%;
   background: var(--greyGradient);
 }
 
 //RWS
 @media only screen and (max-width: 1100px) {
   :root {
-    font-size: 0.8em;
+    font-size: 0.9em;
+  }
+  #desc {
+    padding: 3rem;
   }
 }
 
@@ -101,15 +103,19 @@ nav {
 
 @media only screen and (max-width: 590px) {
   #title h1 {
-    font-size: 3rem;
+    font-size: 2.7rem;
+  }
+  #title ul li.nav-item--primary, #title ul li.nav-item--secondary {
+    width: 100%;
+    margin: 10px 0;
   }
 }
 
 @media only screen and (max-width: 390px) {
+  :root {
+    font-size: 0.7rem;
+  }
   #title h1 {
     font-size: 2.5rem;
-  }
-  #title ul li {
-    display: block;
   }
 }
