--- a/scss/standard-page.scss
+++ b/scss/standard-page.scss
@@ -83,3 +83,8 @@ main {
         grid-template-rows: min-content;
     }
 }
+@media only screen and (max-width: 400px) {
+    header {
+      font-size: 3rem;
+    }
+}
